test/valid/ops.anf
mod ops {
    val a = 1 * 2 + 33 / 5
    val b = (b >> (5 & 2)) - b
    val c = (c ^ 6) << 5
    val d = !(c == 3) || (b >= 5 && a <= 5) || (c + 2 >= 6 && a < 9) || a != 3

    def test() = {
        var x = 2
        x += 3
        x -= 6
        x *= 4
        x /= 2
        x %= 8
        x += --x
        x -= ++x
        x += x--
        x -= x++
        x &= 33
        x ^= 5
        x |= x
    }
}
