test/invalid/patterns.anf
mod patterns {
    val 1 = 2
    var (1, a) = (3, 4)
}
